<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_notes"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort_newest"
        android:title="@string/sort_newest"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_oldest"
        android:title="@string/sort_oldest"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_title"
        android:title="@string/sort_title"
        app:showAsAction="never" />

</menu>
